cmake_minimum_required(VERSION 3.25.1)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_BUILD_TYPE Debug)

# set(CMAKE_MESSAGE_LOG_LEVEL VERBOSE)
# set(CMAKE_CXX_STANDARD 20)  
# set(CMAKE_CXX_STANDARD_REQUIRED ON)
# set(CMAKE_CXX_EXTENSIONS OFF)  

project(Bayan VERSION 0.0.1)

add_executable(sql_emul main.cpp)

FIND_PACKAGE(Boost REQUIRED)

TARGET_LINK_LIBRARIES( sql_emul ${Boost_LIBRARIES})




